# FBCSVExport

./: .dockerignore  .gitignore  CSVExport.sln  Dockerfile  LICENSE  README.md  README_RU.md
doc/: Parallel_reading_in_Firebird.adoc  Parallel_reading_in_Firebird.html  Parallel_reading_in_Firebird_en.adoc  Parallel_reading_in_Firebird_ru.adoc
doc/theme/firebird-html/: firebird.css
projects/CSVExport/: AGE.csv  BREED.csv  CMakeLists.txt  CSVExport.vcxproj  CSVExport.vcxproj.filters
src/: AppMain.cpp  CSVCursorExport.cpp  CSVCursorExport.h  CSVFile.cpp  CSVFile.h  FBAutoPtr.h  fb_types.h  guid.h  sqlda.cpp  sqlda.h
